# sqlalchemy_m2m

./: .gitignore  README.md  example.env  pyproject.toml  requirements.txt
src/: db.sqlite  main.py  main_models_1_2.py  main_models_4_5.py  main_models_6_7.py  main_simple.py
src/core/: db.py  settings.py
src/models/: model1.py  model2.py  model4.py  model5.py  model6.py  model7.py
