[project]
name = "sqlalchemy-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.1"
dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.1",
    "sqlalchemy[asyncio]>=2.0.36",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
]
